export interface Hobby {
    hobbyId: string;
    name: string;
  }